plugins {
    id 'java'
    id 'application'
    id 'org.javamodularity.moduleplugin' version '1.8.12'
    id 'org.openjfx.javafxplugin' version '0.0.13'
    id 'org.beryx.jlink' version '2.25.0'
}

group 'com.mllfjn'
version '1.0.0'

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.10.0'
}

/*sourceCompatibility = '17'
targetCompatibility = '17'*/

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

application {
    mainModule = 'com.mllfjn.simyys'
    mainClass = 'com.mllfjn.simyys.MainStarter'
}

javafx {
    version = '17.0.6'
    modules = ['javafx.controls', 'javafx.fxml']
}

dependencies {

    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
    implementation 'com.google.code.gson:gson:2.10.1'

    implementation "org.testfx:testfx-core:4.0.18"
    implementation "org.testfx:testfx-junit5:4.0.18"
//    testCompile 'org.junit.jupiter:junit-jupiter-api:5.5.1'
    implementation group: 'org.assertj', name: 'assertj-core', version: '3.13.2'
    implementation group: 'org.hamcrest', name: 'hamcrest', version: '2.1'


}

test {
    useJUnitPlatform()
}

jlink {
    imageZip = project.file("/distributions/app-${javafx.platform.classifier}.zip")
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    launcher {
        name = 'app'
    }
}

jlinkZip {
    group = 'distribution'
}